fixing overflow problem in mobile device

--- a/projects/social-proof-section/scss/_main.scss
+++ b/projects/social-proof-section/scss/_main.scss
@@ -14,7 +14,10 @@ body {
 
 .root {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+.wraper {
   display: flex;
   justify-content: center;
   align-items: center;
