--- a/projects/social-proof-section/style/style.css
+++ b/projects/social-proof-section/style/style.css
@@ -31,7 +31,10 @@ body {
 
 .root {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+.wraper {
   display: flex;
   justify-content: center;
   align-items: center;
